// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.graphql 1`] = `
# @prettier

query Browse($offset:Int){browse(offset:$offset)}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# @prettier

query Browse($offset: Int) {
  browse(offset: $offset)
}

`;

exports[`without-pragma.graphql 1`] = `
query Browse($offset:Int){browse(offset:$offset)}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
query Browse($offset:Int){browse(offset:$offset)}

`;
